asg/tests/pass/boolean/not_mutable.leo
function main () {
    const b = false;
    const a = !b;
}