asg/tests/fail/function/multiple_returns_fail_conditional.leo
function main () -> u16 {
    if false {
        const a = 1u16;
        const b = a + 1u16;
        return b;
    } else if false {
        return 0u16;
    }
}